fix overflow issue, use selected language instead of hard-coded

--- a/frontend/index.css
+++ b/frontend/index.css
@@ -27,6 +27,10 @@ h1 {
     color: var(--text-color);
 }
 
+h3{
+    color: var(--secondary-color);
+}
+
 .side_box {
     width: 45%;
     height: 100%;
@@ -34,9 +38,10 @@ h1 {
     border-radius: var(--border-radius);
     padding: 20px;
     box-shadow: 0 0px 4px rgba(0, 0, 0, 0.1);
+    overflow-y: auto;
 }
 
-#inputText, #outputText {
+#inputText {
     width: 100%;
     height: 150px;
     padding: 10px;
@@ -49,10 +54,17 @@ h1 {
     font-family: "Source Serif 4", serif;
 }
 
-#inputText:focus,
-#outputText:focus {
+#inputText:focus {
     outline: none;
     box-shadow: 0 0 0 1px var(--secondary-color);
+}
+
+#outputText{
+
+}
+
+#outputText:focus {
+
 }
 
 button {
@@ -62,7 +74,6 @@ button {
     border: none;
     padding: 10px 20px;
     border-radius: var(--border-radius);
-    margin-top: 40px;
     cursor: pointer;
     font-size: 16px;
     display: inline-block;
@@ -98,7 +109,7 @@ button:hover {
     display: none;
 }
 
-#languageSelect {
+#targetLanguage {
     background-color: var(--background);
     color: var(--text-color);
     border: none;
@@ -113,7 +124,7 @@ button:hover {
     width: 40%;
     display: inline-block;
 }
-#languageSelect:focus {
+#targetLanguage:focus {
     outline: none;
     box-shadow: 0 0 0 1px var(--secondary-color);
 }
